sa-bank/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sa-bank-app-deploy
  labels:
    app: sa-bank-app
spec:
  selector:
    matchLabels:
      app: sa-bank-app
  replicas: 1
  template:
    metadata:
      labels:
        app: sa-bank-app
    spec:
      containers:
      - name: sa-bank-app-container
        image: "quay.io/fxiang1/helloworld:0.0.test"
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3002
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
